<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>at.logic</groupId>
	<artifactId>gap</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<inceptionYear>2008</inceptionYear>
	<name>General Architecture for Proofs</name>

	<modules>
		<module>utils</module>
		<module>testing</module>
		<module>syntax</module>
		<module>provers</module>
		<module>transformations</module>
		<module>dependencies</module>
		<module>algorithms</module>
		<module>gui</module>
		<module>cli</module>
		<!-- <module>applet</module> -->
		<module>parsing</module>
		<module>integration_tests</module>
	</modules>

	<licenses>
		<license>
			<name>GNU GPL v3</name>
			<url>http://www.gnu.org/licenses/gpl.html</url>
		</license>
	</licenses>

	<repositories>
		<repository>
			<id>net.sf.alxa</id>
			<name>Alxa Repository</name>
			<url>http://alxa.sourceforge.net/m2</url>
		</repository>
	</repositories>

	<properties>
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
		<encoding>UTF-8</encoding>
		<scala.version>2.10.0-RC2</scala.version>
		<slf4j.version>1.6.6</slf4j.version>
		<junit.version>4.10</junit.version>
		<specs2.version>1.12.2</specs2.version>
		<scalatest.version>2.0.M4-B2</scalatest.version>
		<mockito.version>1.9.0</mockito.version>
		<scalacheck.version>1.10.0</scalacheck.version>

		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
		<maven-assembly-plugin.version>2.3</maven-assembly-plugin.version>
		<maven-jar-plugin.version>2.4</maven-jar-plugin.version>
		<scala-maven-plugin.version>3.1.0</scala-maven-plugin.version>
		<maven-surefire-plugin.version>2.12.2</maven-surefire-plugin.version>
		<maven-release-plugin.version>2.3.2</maven-release-plugin.version>
		<maven-plugin-plugin.version>2.9</maven-plugin-plugin.version>
		<build-helper-maven-plugin.version>1.7</build-helper-maven-plugin.version>		
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>jline</artifactId>
			<version>${scala.version}</version>
		</dependency>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-compiler</artifactId>
			<version>${scala.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
		<dependency>
			<groupId>org.specs2</groupId>
			<artifactId>specs2_${scala.version}</artifactId>
			<version>${specs2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.scalatest</groupId>
			<artifactId>scalatest_${scala.version}</artifactId>
			<version>${scalatest.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
		</dependency>
		<dependency>
			<groupId>org.scalacheck</groupId>
			<artifactId>scalacheck_${scala.version}</artifactId>
			<version>${scalacheck.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/main/scala</sourceDirectory>
		<testSourceDirectory>src/test/scala</testSourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>${maven-assembly-plugin.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>${scala-maven-plugin.version}</version>
				<configuration>
					<recompileMode>incremental</recompileMode>
					<useZincServer>true</useZincServer>
				</configuration>				
				<executions>
					<execution>
						<goals>
							<goal>add-source</goal>
							<goal>compile</goal>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argline>-Xmx1024m -XX:MaxPermSize=512m</argline>
					<useFile>false</useFile>
					<includes>
						<include>**/*Test.*</include>
						<include>**/*Suite.*</include>
						<include>**/*Spec.*</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven-release-plugin.version}</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>${build-helper-maven-plugin.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-plugin-plugin</artifactId>
				<version>${maven-plugin-plugin.version}</version>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>${scala-maven-plugin.version}</version>
				<configuration>
					<scalaVersion>${scala.version}</scalaVersion>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>
